add functionality js

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div class="list1">Gloria</div>
+    <button class="remove">Quitar</button>
     <button class="add">Añadir</button>
-    <div class="list2">Lista vacía</div>
+    <div class="list2"></div>
     <script src="js/main.js"></script>
 </body>
 </html>
