--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="list1">Gloria</div>
-    <button class="remove">Quitar</button>
-    <button class="add">Añadir</button>
-    <div class="list2"></div>
+    <div class="group">
+        <div class="list1">Gloria</div>
+        <button class="remove">Quitar</button>
+        <button class="add">Añadir</button>
+        <div class="list2"></div>   
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
